<resources>

    <string name="app_name">智能机房巡检</string>


    <string name="cancel">取消</string>
    <string name="concern">确定</string>
    <string name="submit">提交</string>
    <string name="holdon">请稍后</string>
    <string name="holdon_">请稍后...</string>

    <string name="label_begin_app">开始体验</string>
    <string name="label_back">&#60;返回</string>
    <string name="label_skip">跳过&#62;</string>
    <string name="label_load_fail">加载失败，点击重试</string>
    <string name="label_load_empty">暂无信息</string>
    <string name="label_login">登录</string>
    <string name="label_logoff">退出登录</string>
    <string name="label_next">下一步</string>
    <string name="label_job_number">工号:</string>
    <string name="label_setting_lock_pwd">修改开锁密码</string>
    <string name="label_setting_upgrade">检查更新</string>
    <string name="label_rescan">重新扫描</string>
    <string name="label_dispatcher">派发人:</string>
    <string name="label_plan_end_time">要求完成时间:</string>
    <string name="label_pending">待处理(%1$s)</string>
    <string name="label_in_process">处理中(%1$s)</string>
    <string name="label_submit_fail">未提交(%1$s)</string>
    <string name="label_dialog_options">请选择您的操作</string>
    <string name="label_receive_task">接收任务</string>
    <string name="label_refuse_task">拒绝任务</string>
    <string name="label_category_select">选择巡检类别</string>
    <string name="label_normal_state">作业结果:</string>
    <string name="label_normal_yes">正常</string>
    <string name="label_normal_no">异常</string>
    <string name="label_normal_not_support">不支持</string>
    <string name="label_conclusion_state">作业结论:</string>
    <string name="label_conclusion_yes">合格</string>
    <string name="label_conclusion_no">不合格</string>
    <string name="label_run_state">巡视情况/运行情况:</string>
    <string name="label_note">备注:</string>
    <string name="label_note_add">添加备注</string>
    <string name="label_photo">照片:</string>
    <string name="label_photo_add">添加照片</string>
    <string name="label_scaning">扫描中...</string>
    <string name="label_scan_null">未发现蓝牙设备</string>
    <string name="label_rescan_notify">是否需要重新扫描？</string>
    <string name="label_temperature">温度:</string>
    <string name="label_temperature_unit">℃</string>
    <string name="label_humility">湿度:</string>
    <string name="label_humility_unit">%</string>
    <string name="label_temperature_humility_list">@string/title_temperature_humility_list</string>
    <string name="label_setting">@string/title_setting</string>
    <string name="label_more">更多</string>
    <string name="label_notify">温馨提示</string>
    <string name="label_plan_name">任务名称</string>
    <string name="label_dispatch_man">编制人</string>
    <string name="label_deal_man">责任人</string>
    <string name="label_job_man">工作人员</string>
    <string name="label_job_address">工作地点</string>
    <string name="label_job_range">工作范围</string>
    <string name="label_start_time">开始时间</string>
    <string name="label_end_time">结束时间</string>
    <string name="label_job_content">工作内容</string>
    <string name="label_job_remark">备注</string>


    <string name="header_hint_normal">下拉刷新</string>
    <string name="header_hint_ready">松开刷新数据</string>
    <string name="header_hint_loading">正在加载…</string>
    <string name="header_last_time">上次更新：</string>
    <string name="footer_hint_normal">查看更多</string>
    <string name="footer_hint_ready">松开载入更多</string>

    <string name="message_no_net">网络连接已断开</string>
    <string name="message_net_error">网络连接异常</string>
    <string name="message_fail_connect_server">暂时无法连接，请稍后重试</string>
    <string name="message_fail_connect_network">网络连接已断开，请检查重试</string>
    <string name="message_fail_load">加载失败，请稍后重试</string>
    <string name="message_null_param">参数请求异常</string>
    <string name="message_response_exception">参数返回异常</string>
    <string name="message_crash">很抱歉，程序出席异常，即将退出!</string>
    <string name="message_inner_error">系统异常</string>
    <string name="message_connet_error">暂时无法连接，请稍后重试</string>
    <string name="message_lock_pwd_not_equal">两次开锁密码输入不一致</string>
    <string name="message_setting_lock_pwd_not_same">旧开锁密码错误</string>
    <string name="message_setting_lock_pwd_success">修改开锁密码成功</string>
    <string name="message_new_inspection">收到%1$d条新的巡检计划</string>
    <string name="message_refuse_task_success">拒绝任务成功</string>
    <string name="message_refuse_task_fail">拒绝任务失败，请稍后重试</string>
    <string name="message_receive_task_success">接收任务成功</string>
    <string name="message_receive_task_fail">接收任务失败，请稍后重试</string>
    <string name="message_inspection_category_no_forward">已经是第一个分类了</string>
    <string name="message_inspection_category_no_backward">已经是最后一个分类了</string>
    <string name="message_photo_processing">正在处理照片...</string>
    <string name="message_photo_process_fail">处理照片失败</string>
    <string name="message_submit_checking">正在检查数据</string>
    <string name="message_submit_check_fail">检查数据失败，请稍后重试</string>
    <string name="message_submit_check_success">%1$s未填写巡检内容</string>
    <string name="message_submit_confirm">确定要提交该任务吗?</string>
    <string name="message_submiting">正在提交...</string>
    <string name="message_submit_success">提交成功</string>
    <string name="message_submit_fail">提交失败</string>
    <string name="message_submit_success_in_fail_list">该任务已提交</string>
    <string name="message_submit_to_background">已转到后台提交</string>
    <string name="message_sync_notification">正在同步数据...</string>
    <string name="message_open_lock_success">开锁成功</string>
    <string name="message_open_lock_fail">开锁失败</string>
    <string name="message_open_lock_fail_reason">开锁失败，%1$s</string>
    <string name="message_open_lock_try_open">正在尝试开锁...</string>
    <string name="message_open_lock_try_connect">正在尝试连接蓝牙设备...</string>
    <string name="message_open_lock_try_connect_fail">连接蓝牙失败</string>
    <string name="message_bluetooth_disconnect">蓝牙开关已关闭</string>
    <string name="message_pull_logoff">您的账号已在其他设备登录</string>
    <string name="message_loging">正在登录系统...</string>
    <string name="message_login_fail">登录失败, 请检查网络后重试</string>
    <string name="message_login_illegal">工号或开锁密码错误</string>
    <string name="message_login_timeout">登录超时</string>
    <string name="message_logoff_confirm">确定要注销登录吗?</string>


    <string name="hint_job_number">请输入工号...</string>
    <string name="hint_name">请输入姓名...</string>
    <string name="hint_lock_pwd">请输入开锁密码...</string>
    <string name="hint_lock_pwd_repeat">请重复开锁密码...</string>
    <string name="hint_lock_pwd_old">请输入旧开锁密码...</string>
    <string name="hint_lock_pwd_new">请输入新开锁密码...</string>
    <string name="hint_lock_pwd_new_repeat">请重复新开锁密码...</string>
    <string name="hint_refuse_task">请输入拒绝理由...</string>
    <string name="hint_remark">请输入备注信息...</string>

    <string name="empty_job_number">请输入工号</string>
    <string name="empty_name">请输入姓名</string>
    <string name="empty_lock_pwd">请输入开锁密码</string>
    <string name="empty_lock_pwd_repeat">请重复开锁密码</string>
    <string name="empty_lock_pwd_old">请输入旧开锁密码</string>
    <string name="empty_lock_pwd_new">请输入新开锁密码</string>
    <string name="empty_lock_pwd_new_repeat">请重复新开锁密码</string>
    <string name="empty_refuse_task">请输入拒绝理由</string>

    <string name="title_register">注册</string>
    <string name="title_gesture_print_enroll">设置手势密码</string>
    <string name="title_gesture_print_verify">验证手势密码</string>
    <string name="title_setting">设置</string>
    <string name="title_setting_lock_pwd">修改开锁密码</string>
    <string name="title_open_door">开门</string>
    <string name="title_open_lock">开锁</string>
    <string name="title_temperature_humility_list">机房温湿度</string>

    <string name="gestureprint_enroll_hint">请输入手势密码</string>
    <string name="gestureprint_enroll_repeat">请重新输入手势密码</string>
    <string name="gestureprint_enroll_repeat_fail">两次输入不一致，请重新设置</string>
    <string name="gestureprint_verify_hint">请输入手势密码</string>
    <string name="gestureprint_verify_fail">手势密码错误，请重新输入</string>
    <string name="gestureprint_short">请至少连接%1$s个点</string>

</resources>
