<RelativeLayout
    style="@style/matchTheme"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/guide_imgview"
        style="@style/matchTheme"
        android:scaleType="centerCrop"/>

    <Button
        android:id="@+id/guide_start_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:text="@string/label_begin_app"
        android:textSize="@dimen/text_size_small"
        android:textColor="@drawable/selector_txt_title"
        android:background="@drawable/selector_btn_title_hollow"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/v_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="16dp"
        android:text="@string/label_skip"
        android:textColor="@color/txt_title"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:id="@+id/v_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/label_back"
        android:textColor="@color/txt_title"
        android:textSize="@dimen/text_size_medium"/>

</RelativeLayout> 