<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/verticalContainerTheme"
    android:fitsSystemWindows="true">

    <include layout="@layout/inflate_header" />

    <ScrollView style="@style/scrollVTheme">

        <LinearLayout
            style="@style/verticalWrapContainerTheme"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <LinearLayout
                style="@style/verticalWrapContainerTheme"
                android:background="@color/bg_item">

                <View style="@style/splitTheme" />

                <com.wm.lock.core.widget.ClearAbleEditText
                    android:id="@+id/et_lock_pwd_old"
                    style="@style/inputRegisterTheme"
                    android:drawableLeft="@mipmap/ic_lock_pwd"
                    android:hint="@string/hint_lock_pwd_old"
                    android:inputType="numberPassword"
                    android:maxLength="6" />

                <View style="@style/splitInnerTheme" />

                <com.wm.lock.core.widget.ClearAbleEditText
                    android:id="@+id/et_lock_pwd"
                    style="@style/inputRegisterTheme"
                    android:drawableLeft="@mipmap/ic_lock_pwd"
                    android:hint="@string/hint_lock_pwd_new"
                    android:inputType="numberPassword"
                    android:maxLength="6" />

                <View style="@style/splitInnerTheme" />

                <com.wm.lock.core.widget.ClearAbleEditText
                    android:id="@+id/et_lock_pwd_repeat"
                    style="@style/inputRegisterTheme"
                    android:drawableLeft="@mipmap/ic_lock_pwd"
                    android:hint="@string/hint_lock_pwd_new_repeat"
                    android:inputType="numberPassword"
                    android:maxLength="6" />

                <View style="@style/splitTheme" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_concern"
                style="@style/btnBaseTheme"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="24dp"
                android:background="@drawable/selector_btn_title"
                android:text="@string/concern" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>